draw io described

--- a/Documentation.tex
+++ b/Documentation.tex
@@ -143,9 +143,6 @@ Proces iteracyjny bez zmiany temperatury wykonuje się okre\si loną (ustaloną 
 Prawdopodobieństwo tej zamiany zależy od funkcji kosztu oraz obecnej temperatury. Prawdopodobieństwo zamiany okre\si lone jest wzorem:
 $$ P = \exp\left(\frac{\Delta E}{T}\right),  $$
 gdzie:\\
-%\begin{flalign}
-%& \Delta E&  - funkcja kosztu
-%\end{flalign}
 $ \Delta E$  - funkcja kosztu, \\
 $T$ - obecna warto\si ć temperatury.\\
 
@@ -221,6 +218,8 @@ Do implementacji projektu użyłem \si rodowiska Microsoft Visual Studio Communi
 Dobra znajomo\si ć i przejrzysto\si ć tego \si rodowiska programistycznego pozwoliła mi skupić się na rozwiązywaniu problemu, omijając problem zapoznawania się z nowym narzędziem.
 	\subsubsection{Mathematica}
 	Mathematica jest programem opartym na systemie obliczeń symbolicznych oraz numerycznych. Program ten jest do\si ć popularny w\si ród naukowców ze względu na wiele zalet, jak np. wydajno\si ć czy rozpięte możliwo\si ci wizualizacji danych. Mathematica jest programem komercyjnym, dlatego stworzenie wykresów do tego projektu oparłem na licencji wydziału Matematyki Stosowanej.
+\subsubsection{Draw.io}
+Jest to aplikacja webowa, pozwalająca w prosty i przejrzysty sposób stworzyć darmowe reprezentacje wykresów, przepływów pracy czy schematów blokowych, oraz zarządzanie nimi. 
 	
 	\subsection{Użyte technologie}
 	\subsubsection{C\#}
