--- a/Documentation.tex
+++ b/Documentation.tex
@@ -394,10 +394,10 @@ Wyniki uzyskane dla powyższych zestawów parametrów nie dają zadowalających 
 \begin{tabular}{|c|c|c||c|c|c|} 
                   \hline
                    $T_0$
-                  & $It$ (*1000)
+                  & $It (\times 1000)$
                   &$\overline{f}_{min}$ 
 & $T_0$
- & $It$ (*1000)
+ & $It(\times 1000)$ 
  &$\overline{f}_{min}$ \\ \hline
 10 & 100 & 0,1215 & 4 & 100 & 0,2337 \\ \hline
 10 & 90 & 0,0252 & 4 & 90 & 0,3147 \\ \hline
@@ -421,16 +421,19 @@ Wyniki uzyskane dla powyższych zestawów parametrów nie dają zadowalających 
 8 & 20 & 0,8323 & 2 & 20 & 0,4180 \\ \hline
 8 & 10 & 1,1295 & 2 & 10 & 0,8205 \\ \Xhline{3\arrayrulewidth}
 
-6 & 100 & 0,2208 \\ \hline 
-6 & 90 & 0,2242 \\ \hline 
-6 & 80 & 0,5203 \\ \hline 
-6 & 70 & 0,8194 \\ \hline 
-6 & 60 & 0,5308 \\ \hline 
-6 & 50 & 0,4199\\ \hline 
-6 & 40 & 0,3182 \\ \hline 
-6 & 30 & 0,4311 \\ \hline 
-6 & 20 & 0,5213 \\ \hline 
-6 & 10 & 0,7173 \\ \Xhline{3\arrayrulewidth}
+6 & 100 & 0,2208 & 0,1 & 100 & 0,5275 \\ \hline 
+6 & 90 & 0,2242& 0,1 & 90 & 0,6247 \\ \hline 
+6 & 80 & 0,5203 & 0,1 & 80 & 0,6163 \\ \hline 
+6 & 70 & 0,8194 & 0,1 & 70 & 0,6202 \\ \hline 
+6 & 60 & 0,5308 & 0,1 & 60 & 0,8208 \\ \hline
+6 & 50 & 0,4199& 0,1 & 50 & 0,6103 \\ \hline 
+6 & 40 & 0,3182 & 0,1 & 40 & 0,7318\\ \hline 
+6 & 30 & 0,4311 & 0,1 & 30 & 0,8203 \\ \hline 
+6 & 20 & 0,5213 & 0,1 & 20 & 1,1167 \\ \hline 
+6 & 10 & 0,7173 & 0,1 & 10 & 0,8112 \\ \hline 
+
+
+
 
 
 \end{tabular} 
