--- a/Documentation.tex
+++ b/Documentation.tex
@@ -320,6 +320,9 @@ Przed rozpoczęciem testów przyjęto dwa założenia:
 \end{itemize}
 
 W pierwszym etapie została sprawdzona temperatura dla warto\si ci $ T_0 \in \{2, 4, ..., 10\}$ oraz liczbie wewnętrznych iteracji $It \in \{100, 300, ..., 1100\}$. \\
+
+\clearpage
+
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Wyniki testów parametrów dla podanych zakresów, gdzie $T_0$ jest temperaturą początkową, $It$ jest ilo\si cią iteracji, a $\overline{f}_{min}$ \si rednią rozwiązań dla podanych parametrów uzyskaną w 10 próbach}
@@ -352,11 +355,14 @@ W pierwszym etapie została sprawdzona temperatura dla warto\si ci $ T_0 \in \{2
 \end{tabular}
 \end{table}
 
+
 Wyniki uzyskane dla powyższych zestawów parametrów nie dają zadowalających rezultatów. Można jednak zauważyć, iż w tym momencie badań temperatura nie ma aż takiego znaczenia, a większa ilo\si ć iteracji ,,zdaje się dawać lepsze" rezultaty. Zgodnie z założeniem, iż temperatura nie powinna być zbyt wysoka, postanowili\si my dalej sprawdzać ten sam zakres temperatur i zwiększyć ilo\si ć iteracji około stukrotnie, co prezentuje następna tabela.
+
+\clearpage
 
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\caption{Wyniki testów parametrów dla podanych zakresów, gdzie $T_0$ jest temperaturą początkową, $It$ jest ilo\si cią iteracji, a $\overline{f}_{min}$ \si rednią rozwiązań dla podanych parametrów}
+\caption{Wyniki testów parametrów dla podanych zakresów, gdzie $T_0$ jest temperaturą początkową, $It$ jest ilo\si cią iteracji, a $\overline{f}_{min}$ \si rednią rozwiązań dla podanych parametrów uzyskaną w 10 próbach}
 %\footnotesize Smaller note of table that describes what the table is all about.
 \begin{tabular}{|c|c|c||c|c|c|} 
                   \hline
@@ -385,12 +391,59 @@ Wyniki uzyskane dla powyższych zestawów parametrów nie dają zadowalających 
 \end{tabular} 
 \end{table}
 
-Średnia rozwiązań najlepszego wyniku w tym te\si cie wydawała się być obiecująca, jednak sprawdzenie jako\si ci takich parametrów zwróciło jako\si ć równą 34\%, co nie jest satysfakcjonujące. Postanowili\si my zwiększyć ponownie zakres iteracji dziesięciokrotnie, co można zobaczyć w następnej tabeli (tabela nr XXX (bez ,,nr")).
+Średnia rozwiązań najlepszego wyniku w tym te\si cie wydawała się być obiecująca, jednak sprawdzenie jako\si ci takich parametrów zwróciło jako\si ć równą 34\%, co nie jest satysfakcjonujące. Postanowili\si my zwiększyć ponownie zakres iteracji dziesięciokrotnie, co można zobaczyć w następnej tabeli (tabela 3). \\
+
+\clearpage
 
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Wyniki testów parametrów dla podanych zakresów, gdzie $T_0$ jest temperaturą początkową, $It$ jest ilo\si cią iteracji, a $\overline{f}_{min}$ \si rednią rozwiązań dla podanych parametrów}
 %\footnotesize Smaller note of table that describes what the table is all about.
+\begin{tabular}{|c|c|c||c|c|c||c|c|c|} 
+                  \hline
+                   $T_0$
+                  & $It (\times 1000)$
+                  &$\overline{f}_{min}$ 
+& $T_0$
+ & $It(\times 1000)$ 
+ &$\overline{f}_{min}$ 
+& $T_0$
+& $It (\times 1000)$
+&$\overline{f}_{min}$ \\ \hline
+10 & 100 & 0,1215 &6 & 100 & 0,2208& 2 & 100 & 0,3224 \\ \hline
+10 & 90 & 0,0252  &6 & 90 & 0,2242& 2 & 90 & 0,6167\\ \hline
+10 & 80 & 0,1216 &6 & 80 & 0,5203  & 2 & 80 & 0,2266 \\ \hline
+10 & 70 & 0,3249 &6 & 70 & 0,8194 & 2 & 70 & 0,3247\\ \hline 
+10 & 60 & 0,3199  &6 & 60 & 0,5308 & 2 & 60 & 0,5264\\ \hline 
+10 & 50 & 0,5257  &6 & 50 & 0,4199& 2 & 50 & 0,3248\\ \hline
+10 & 40 & 0,5223 &6 & 40 & 0,3182  & 2 & 40 & 0,4396\\ \hline 
+10 & 30 & 0,8243 &6 & 30 & 0,4311 & 2 & 30 & 0,6237\\ \hline
+10 & 20 & 0,3277  &6 & 20 & 0,5213& 2 & 20 & 0,4180\\ \hline 
+10 & 10 & 0,5312  &6 & 10 & 0,7173& 2 & 10 & 0,8205\\ \Xhline{3\arrayrulewidth}
+
+8 & 100 & 0,2279& 4 & 100 & 0,2337   & 0,1 & 100 & 0,5275 \\ \hline 
+8 & 90 & 0,4161 & 4 & 90 & 0,3147  &0,1 & 90 & 0,6247 \\ \hline 
+8 & 80 & 0,2257 & 4 & 80 & 0,2206 &0,1 & 80 & 0,6163 \\ \hline 
+8 & 70 & 0,2200 & 4 & 70 & 0,2209 &0,1 & 70 & 0,6202 \\ \hline 
+8 & 60 & 0,6255& 4 & 60 & 0,2178  & 0,1 & 60 & 0,8208 \\ \hline
+8 & 50 & 0,4257 & 4 & 50 & 0,3222 & 0,1 & 50 & 0,6103 \\ \hline 
+8 & 40 & 0,1310 & 4 & 40 & 0,5243 &0,1 & 40 & 0,7318\\ \hline 
+8 & 30 & 0,5167 & 4 & 30 & 0,5192  &0,1 & 30 & 0,8203 \\ \hline 
+8 & 20 & 0,8323 & 4 & 20 & 0,3261  & 0,1 & 20 & 1,1167 \\ \hline
+8 & 10 & 1,1295 & 4 & 10 & 0,7265& 0,1 & 10 & 0,8112 \\ \hline  
+\end{tabular} 
+\end{table}
+
+
+
+
+
+
+\begin{table}[htbp]\centering
+\def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
+\caption{Wyniki testów parametrów dla podanych zakresów, gdzie $T_0$ jest temperaturą początkową, $It$ jest ilo\si cią iteracji, a $\overline{f}_{min}$ \si rednią rozwiązań dla podanych parametrów}
+%\footnotesize Smaller note of table that describes what the table is all about.
+\scalebox{0.72}{
 \begin{tabular}{|c|c|c||c|c|c|} 
                   \hline
                    $T_0$
@@ -431,13 +484,11 @@ Wyniki uzyskane dla powyższych zestawów parametrów nie dają zadowalających 
 6 & 30 & 0,4311 & 0,1 & 30 & 0,8203 \\ \hline 
 6 & 20 & 0,5213 & 0,1 & 20 & 1,1167 \\ \hline 
 6 & 10 & 0,7173 & 0,1 & 10 & 0,8112 \\ \hline 
-
-
-
-
-
 \end{tabular} 
+}
 \end{table}
+
+
 
 Otrzymane wyniki sugerują, iż najlepsze wyniki dla podanych zakresów można otrzymać przy temperaturze równej 10 i bardzo wysokich ilo\si ciach iteracji. W następnym kroku sprawdzili\si my jako\si ć rozwiązań dla temperatury równej 10 i iteracji w zakresie przedstawionej w tabeli. \\
 
